--- a/Frontend/landingpage.html
+++ b/Frontend/landingpage.html
@@ -504,6 +504,7 @@ function generateProductCards(products) {
 });
 
 document.addEventListener('DOMContentLoaded', function() {
+    console.log(document.getElementById('searchForm'));
     document.getElementById('searchForm').addEventListener('submit', function(e) {
         e.preventDefault(); // Prevent the default form submission behavior
 
