--- a/Frontend/landingpage.html
+++ b/Frontend/landingpage.html
@@ -504,7 +504,7 @@ function generateProductCards(products) {
 });
 
 document.addEventListener('DOMContentLoaded', function() {
-  console.log(document.getElementById('searchForm'));
+  console.log(document.getElementById('searchField'));
     const urlParams = new URLSearchParams(window.location.search);
     const searchFieldFromURL = urlParams.get('searchField');
 
