--- a/Frontend/landingpage.html
+++ b/Frontend/landingpage.html
@@ -505,6 +505,7 @@ function generateProductCards(products) {
 
 document.addEventListener('DOMContentLoaded', function() {
   console.log(document.getElementById('searchField'));
+  console.log(document.getElementById('searchForm'));
     const urlParams = new URLSearchParams(window.location.search);
     const searchFieldFromURL = urlParams.get('searchField');
 
