--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -200,7 +200,7 @@
   
         if (response.ok) {
           // Handle success, e.g., save the token and user_id, navigate to another page, etc.
-          alert('Login successful! Remember Me: ' + (remember ? 'Yes' : 'No') + '\nToken: ' + result.token);
+        //   alert('Login successful! Remember Me: ' + (remember ? 'Yes' : 'No') + '\nToken: ' + result.token);
           // Example: Save the token and user_id
           localStorage.setItem('token', result.token);
           localStorage.setItem('user_id', result.user_id);
