--- a/Frontend/register.html
+++ b/Frontend/register.html
@@ -139,7 +139,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #a44e24;">
     <div class="container-fluid">
-      <a class="navbar-brand mb-0 h1" href="#"><img src="/img/brand-name.png" alt="Logo"></a>
+      <a class="navbar-brand mb-0 h1" href="#"><img src="vendorkita.png" alt="Logo"></a>
     </div>
   </nav>
   
