--- a/Frontend/pageproduct.html
+++ b/Frontend/pageproduct.html
@@ -231,6 +231,7 @@
       <div id="paymentModalBackdrop">
         <div id="paymentModal">
           <h2>Complete Your Payment</h2>
+          <h1>Rekening BCA : 3231568867</h1>
           <input type="email" id="emailInput" placeholder="Your Email">
           
           <!-- Existing Quantity Input -->
